<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.gomint</groupId>
    <artifactId>jraknet</artifactId>
    <version>6.2.0-SNAPSHOT</version>

    <!-- Distribution Management -->
    <distributionManagement>
        <repository>
            <id>gomint-repo</id>
            <name>GoMint Release Repository</name>
            <url>https://repo.gomint.io/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>gomint-snapshots</id>
            <name>GoMint Snapshot Repository</name>
            <url>https://repo.gomint.io/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
            <version>4.1.32.Final</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-common</artifactId>
            <version>4.1.32.Final</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-buffer</artifactId>
            <version>4.1.32.Final</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>4.1.32.Final</version>
        </dependency>

        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-native-epoll</artifactId>
            <version>4.1.32.Final</version>
            <classifier>linux-x86_64</classifier>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <!-- this helps when getting error: file should be on source path, or on patch path for module -->
                    <compilerArgs>
                        <arg>-sourcepath</arg>
                        <arg>${project.basedir}/src/main/java${path.separator}${project.basedir}/target/generated-sources/annotations${path.separator}/</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <excludes>
                        <!-- CI might run in unprivileged container which might prevent us from performing network tests -->
                        <exclude>**/IPv6SocketTest.java</exclude>
                    </excludes>

                    <forkCount>0</forkCount> <!-- changed this to 0 -->
                    <reuseForks>false</reuseForks>
                    <!-- <threadCount>1</threadCount> --> <!-- shall be used with 'parallel' -->
                    <printSummary>true</printSummary>
                    <!-- <skipTests>false</skipTests> --> <!-- defaults to false -->

                    <!-- run test in headless mode -->
                    <systemPropertyVariables>
                        <glass.platform>Monocle</glass.platform>
                        <monocle.platform>Headless</monocle.platform>
                        <prism.order>d3d</prism.order>
                    </systemPropertyVariables>

                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
